# pecan_py_napari

./: .gitignore  Cracks go pop + save mask.yml  Cracks go pop.yml  README.md  a complete pipeline for crack.yml  a full crack.yml  a if b complete = crack & kernel.yml  a if b.yml  amazing.yml  batch_yolo_seg_infer.py  damaged kernel.yml  edge detection variation.yml  files to use for training.txt  getting the blue-white mask for crack.yml  live_yolo_flir_inference.ipynb  notebook tests.ipynb  p1.yml  pecans in camera2 _ 02.yml  pecans in camera2.yml  pipeline 2.yml  pyproject.toml  refine_training_masks.ipynb  refine_training_masks.py
contrastive_runs/: contrastive - [Crack, Kernel, Pecan].pt
docs/: PECAN_PY_SETUP.md  pecan_py_pyproject.toml.example
pecan_py/: BaseVideo.py  ColorTuner.py  OpticalFlow.py  PecanVideo.py  Segmentor.py  VideoManipulator.py  __init__.py  video_utils.py
pipelines/: 01 - detects pecan saves pecan mask.yml  02 - saves Pecan and Crack.yml  Gets cracks under-segmentation.yml  Test - edge detection in combination with masks generated for crack.yml  Test on kernel detection & saving.yml  a complete pipeline for crack.yml  a if b complete = crack & kernel.yml  a if b.yml  adjustment - heatmap of detecting kernel or damaged kernel..yml  detects seems & saves crack.yml  detects seems.yml  getting the blue-white mask for crack.yml  normalization first.yml  pipeline 2.yml  test 01.yml  test 02.yml  test 03.yml  very close.yml  will it work 2.yml  will it work.yml
runs/segment/train/: args.yaml  results.csv
scripts/: setup_spinnaker_env.ps1
src/napari_pecan_py/: __init__.py  _menu_groups.py  _notifications.py  _qt_icons.py  _reader.py  _widget.py  napari.yaml  trim_frames.py  video_meta.py
src/napari_pecan_py/widgets/batch_pipeline/: __init__.py  logic.py  widget.py
src/napari_pecan_py/widgets/cascade_seg/: __init__.py  hierarchy.py  model.py
src/napari_pecan_py/widgets/color_adjustments/: __init__.py  curves_histogram_editor.py  defaults.py  levels_histogram_editor.py  logic.py  parallelism.py  recipes.py  widget.py
src/napari_pecan_py/widgets/color_thresholding/: __init__.py  defaults.py  denoise.py  logic.py  surface_blur.py  temporal_median_logic.py  widget.py
src/napari_pecan_py/widgets/color_tuner/: defaults.py  logic.py  widget.py
src/napari_pecan_py/widgets/contrastive_coding/: __init__.py  data.py  hierarchical_sampling.py  hierarchy.py  model.py  sampling.py  widget.py
src/napari_pecan_py/widgets/edge_detection/: __init__.py  logic.py  widget.py
src/napari_pecan_py/widgets/mask_ops/: __init__.py  logic.py  widget.py
src/napari_pecan_py/widgets/mask_retouching/: __init__.py  logic.py  widget.py
src/napari_pecan_py/widgets/pecan_ellipse/: __init__.py  logic.py  widget.py
src/napari_pecan_py/widgets/pipeline_recorder/: __init__.py  layer_hooks.py  logic.py  state.py  widget.py
src/napari_pecan_py/widgets/sam2_seg/: __init__.py  logic.py  widget.py
src/napari_pecan_py/widgets/tracking/: __init__.py  logic.py  widget.py
src/napari_pecan_py/widgets/unet_seg/: __init__.py  model.py
src/napari_pecan_py/widgets/yolo_seg/: __init__.py  model.py  widget.py
tests/: __init__.py  test_adjustment_parallelism.py  test_adjustment_recipes.py  test_adjustment_stack_temporal.py  test_batch_pipeline.py  test_cascade_seg.py  test_contrastive_data.py  test_contrastive_hierarchy.py  test_contrastive_model.py  test_denoise.py  test_mask_ops.py  test_mask_retouching.py  test_median_background.py  test_notifications.py  test_pecan_ellipse_smoothing.py  test_pipeline_recorder_logic.py  test_qt_icons.py  test_resolve_time_index.py  test_sam2_prompts.py  test_tracking.py  test_trim_frames.py  test_unet_seg.py  test_video_meta.py  test_widget.py  test_yolo_seg_model.py
