[project]
name = "napari-pecan-py"
version = "0.0.1"
description = "A napari plugin for Pecan Py"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "BSD-3-Clause" }
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Framework :: napari",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "napari>=0.7.0",
    # Napari 0.6+ Shapes layer calls bermuda.triangulate_path_edge; older bermuda stubs break add_shapes.
    "bermuda>=0.1.7",
    "numpy",
    "magicgui",
    "qtpy",
    "scikit-image",
    "PyWavelets",
    "pecan-video",
    "matplotlib>=3.10.8",
    "tifffile",
    "ultralytics",
    "segmentation-models-pytorch>=0.3.3",
    "ipywidgets>=8.1.8",
    # SAM 2 widget (PyPI package is ``sam2``; do not use the broken git+ URL).
    "torch>=2.0",
    "torchvision>=0.20",
    "huggingface_hub>=0.20",
    "sam2>=1.1.0",
    "decord>=0.6.0",
    "pyspin>=1.2.0",
]

[project.optional-dependencies]
all = ["napari[all]"]

# CUDA PyTorch on Windows/Linux (see [[tool.uv.index]] / [tool.uv.sources] below).
# macOS falls back to PyPI CPU wheels via the sys_platform marker.

[project.entry-points."napari.manifest"]
napari-pecan-py = "napari_pecan_py:napari.yaml"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]

# GPU builds for SAM 2 / YOLO on Windows and Linux (RTX etc.).
# https://docs.astral.sh/uv/guides/integration/pytorch/
[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[dependency-groups]
dev = [
    "npe2",
    "pytest",
    "pytest-cov",
    "pytest-qt",
    "napari[qt]",
]
